fixed spacing

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header .wrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-height: 7% ;
+  height: 7% ;
 
   nav {
     font-size: 2.5rem;
@@ -112,7 +112,7 @@ header .wrapper {
 main {
 
   .heroContainer {
-    height: 40vh;
+    height: 50vh;
     display: grid;
     grid-template-columns: 50% 50%;
     justify-content: space-around;
